# torchguard

./: .gitignore  .pre-commit-config.yaml  AUDIT.md  README.md  __init__.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
scripts/: benchmark_optimizations.py  check_imports.py  validate_package.py
src/torchguard/: __init__.py  codes.py  config.py  constants.py  decorators.py  detect.py  flags.py  inspect.py  location.py  result.py  severity.py  tensor.py  tensorcheck.py
src/torchguard/typing/: __init__.py  annotation.py  dim.py  dtypes.py  errors.py  tensor.py
tests/: conftest.py  test_accumulation.py  test_codes.py  test_compile.py  test_edge_cases.py  test_flags.py  test_guardedtensor.py  test_inspect_and_package.py  test_integration.py  test_location.py  test_real_model.py  test_recovery.py  test_result.py  test_tensorcheck.py  test_tensorcheck_edge.py  test_typing.py
torchguard/tests/: test_checks.py  test_combinators.py  test_control_flow.py  test_core.py  test_decorators.py  test_error_t_class.py  test_experimental.py  test_exports.py  test_inductor.py  test_integration.py  test_location.py  test_tensorcheck.py
