[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "torchguard"
version = "0.2.0"
description = "Per-sample, torch.compile-safe error tracking for PyTorch via a GuardedTensor subclass."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "TorchGuard contributors" }]
keywords = ["pytorch", "torch.compile", "error-tracking", "nan", "inf", "tensor-subclass"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["torch>=2.4"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.8",
]

[project.urls]
Homepage = "https://github.com/Ma1achy/torchguard"
Repository = "https://github.com/Ma1achy/torchguard"

[tool.hatch.build.targets.wheel]
packages = ["src/torchguard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "E731"]

[tool.mypy]
python_version = "3.10"
files = ["src/torchguard"]
ignore_missing_imports = true
warn_unused_ignores = false
check_untyped_defs = true
